Update Gradle, ShadowJar and Java